# Diplom

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
contacts/: models.py
contacts/migrations/: 0001_initial.py
medicine/: admin.py  forms.py  models.py  urls.py  views.py
medicine/migrations/: 0001_initial.py  0002_doctor_avatar.py  0003_company.py  0004_company_doctor.py  0005_alter_company_options_company_services.py  0006_alter_doctor_specialization.py  0007_appointment.py  0008_appointment_status_and_more.py  0009_alter_appointment_status.py  0010_appointment_response.py  0011_company_email_alter_company_phone.py  0012_company_address.py  0013_company_photo.py
medicine/templates/medicine/: appointment_form.html  appointment_list.html  base.html  company.html  contacts.html  doctor_detail.html  doctor_list.html  footer.html  header.html  home.html
medicine/templates/medicine/color_fon/: color.html
services/: admin.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_service_photo.py  0003_service_specialization.py  0004_alter_service_specialization.py  0005_rename_specialization_service_service_specialization.py
services/templates/services/: head_service.html  service_detail.html  service_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html  users_list.html
(+4 files in other folders)
